fix: font selector header

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </a>
             </div>
         </div>
-        <div ng-controller="TextController" ng-show="visible" class="footer-panel textformat">
+        <div ng-controller="TextController" ng-show="visible" class="textformat footer-panel">
             <div class="header">
                 TEXT <span>FORMAT</span>
             </div>
