--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <head>
     <meta charset="utf-8" />
     <title>Online Logo Maker</title>
-    <link rel="stylesheet" href="app.css?v=0.105" type="text/css" />
+    <link rel="stylesheet" href="app.css?v=0.106" type="text/css" />
     <link rel="stylesheet" href="css/mlColorPicker.css" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
     <script src="js/fabric.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/mlColorPicker.js"></script>
     <script src="js/xml2js.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.6/angular-sanitize.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/angular-animate.min.js"></script>
+    <script src="js/angular-sanitize.js"></script>
     <script src="js/angular-utf8-base64.min.js"></script>
     <script src="js/blob.js"></script>
     <script src="js/canvas-toBlob.js"></script>
     <script src="js/fileSaver.js"></script>
-    <script src="js/olm.js?v=0.128"></script>
+    <script src="js/olm.js?v=0.129"></script>
     <script src="js/tools.js?v=3"></script>
 </head>
 <body>
@@ -265,6 +265,7 @@
                 </div>
             </div>
         </div>
+        <!-- Symbols -->
         <div ng-controller="SymbolColorController" ng-show="visible" class="footer-panel symbolcolor">
             <div class="header">
                 SYMBOL <span>COLOR</span>
@@ -281,6 +282,7 @@
                 </a>
             </div>
         </div>
+        <!-- Fonts -->
         <div ng-controller="TextController" ng-show="visible" class="textformat footer-panel">
             <div class="header">
                 TEXT <span>FORMAT</span>
@@ -288,7 +290,7 @@
             <div class="container">
                 <span>Font:</span>
                     <a ng-click="$.onFontClick()" href="#">
-                        <div class="font-picker"></div>
+                        <div class="font-picker"><span>{{ font_name }}</span></div>
                     </a>
                 <br>
                 <span>Color:</span>
