fix: text-font container

--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                 TEXT <span>FORMAT</span>
             </div>
             <div class="container">
-                <span>Font:</span>
+                <div>Font:</div>
                     <a ng-click="$.onFontClick()" href="#">
                         <div class="font-picker"><span>{{ font_name }}</span></div>
                     </a>
                 <br>
-                <span>Color:</span>
+                <div>Color:</div>
                 <a ng-click="$.onColorClick()" href="#">
                         <div class="text-picker"></div>
                 </a>
