fix: decinal point values of x/y and w/h

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="js/canvas-toBlob.js"></script>
     <script src="js/fileSaver.js"></script>
     <script src="js/olm.js?v=0.129"></script>
-    <script src="js/tools.js?v=3"></script>
+    <script src="js/tools.js?v=4"></script>
 </head>
 <body>
 
@@ -161,7 +161,7 @@
                 </div>
                 <div class="object-position">
                     <div style="float:left; padding-left:15px">OBJECT <span class="wine-color">X:</span></div>
-                    <div><input class="input position" ng-model="x" type="number"></input> PIX</div>
+                    <div><input class="input position" ng-model="x" type="number" step="0.01"></input> PIX</div>
                     <div style="float:left; padding-left:15px">OBJECT <span class="wine-color">Y:</span></div>
                     <div><input class="input position" ng-model="y" type="number"></input> PIX</div>
                 </div>
