--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
     <script src="js/fabric.js"></script>
     <script src="js/jquery.min.js"></script>
-    <script src="js/mlColorPicker.js"></script>
+    <script src="js/mlColorPicker.js?v=0.1"></script>
     <script src="js/xml2js.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
