--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
     <div ng-controller="CanvasController" class="working panel">
         <div class="header">WORKING PANEL</div>
-        <div class="content">
-            <canvas id="canvas"></canvas>
+        <div class="content" id="canvas-container">
+            <canvas width="100" height="100" id="canvas"></canvas>
         </div>
         <div class="footer">
             <span style="position:relative; top:-5;">UNDO</span> <img ng-click="$.onUndoClick()" ng-class="{false: 'inactive'}[undoActive]" src="assets/images/undo_icon.png"  title="Undo (CTRL-Z)"/>
