--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Online Logo Maker</title>
-    <link rel="stylesheet" href="app.css?v=0.108" type="text/css" />
+    <link rel="stylesheet" href="app.css?v=0.10" type="text/css" />
     <link rel="stylesheet" href="css/mlColorPicker.css" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
     <script src="js/fabric.js"></script>
@@ -17,7 +17,7 @@
     <script src="js/canvas-toBlob.js"></script>
     <script src="js/fileSaver.js"></script>
     <script src="js/olm.js?v=0.138"></script>
-    <script src="js/tools.js?v=0.6"></script>
+    <script src="js/tools.js?v=0.7"></script>
 </head>
 <body>
 
@@ -102,8 +102,8 @@
 
     <div ng-controller="CanvasController" class="working panel">
         <div class="header">WORKING PANEL</div>
-        <div class="content" id="canvas-container">
-            <canvas width="100" height="100" id="canvas"></canvas>
+        <div class="content">
+            <canvas id="canvas"></canvas>
         </div>
         <div class="footer">
             <span style="position:relative; top:-5;">UNDO</span> <img ng-click="$.onUndoClick()" ng-class="{false: 'inactive'}[undoActive]" src="assets/images/undo_icon.png"  title="Undo (CTRL-Z)"/>
@@ -111,7 +111,7 @@
             <span style="float:right;">
                 <span style="position:relative; top:-5; font-size:12px;">BACKGROUND COLOR </span>
                 <a ng-click="$.onBgColorClick();" href="#" class="background-picker">
-                    <img src="assets/images/DropdownColorPickerTextForm.png" ng-cick="$.onBgColorClick()" style="height:25px;">
+                    <img src="assets/images/DropdownColorPickerTextForm2.png" ng-cick="$.onBgColorClick()" style="height:25px;">
                 </a>
                 <a style="float:right; vertical-align:middle; padding-top:5px;" class="btn btn-grey">
                     <span style="vertical-align:middle; color: #32cafd">GRID ON</span>
